formato css al index

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <Head>
+        <link href="\css\estilos.css" rel="stylesheet" type="text/css">
         <title>
             <h1>Probando git</h1>
         </title>
